# DeepAudioClassificationByHackernoonCPP

./: CMakeLists.txt  README.md  buildAndRun.sh
include/: audioFilesTools.h  classify.h  config.h  datasetTools.h  model.h  sliceSpectrogram.h  songToData.h
src/: config.txt  main.cpp
